<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F297B5"
        android:text="@string/button_label_browser" />

    <Button
        android:id="@+id/button_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_toast"
        android:textColor="@color/cardview_light_background"
        android:backgroundTint="#F47EA7" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="160sp"
        android:background="#FFFFFF"
        android:layout_weight="2"
        android:text="@string/count_initial_value"
        android:gravity="center" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E77799"
        android:text="@string/button_label_count" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reset"
        android:layout_toRightOf="@+id/button_count"
        android:backgroundTint="#F64781"/>

    <Button
        android:id="@+id/button_pindah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EB2164"
        android:text="@string/button_label_pindah"
        app:cornerRadius="20dp"/>

</LinearLayout>